<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.mdp_11.MainActivity">
<!--    tools:context="com.android.mdp_11.MainActivity">-->

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <!--  390 x 520  -->
    <!--  wrap_content  -->

    <view
        android:id="@+id/mapView"
        class="com.android.mdp_11.GridMap"
        android:layout_width="450dp"
        android:layout_height="600dp"
        android:layout_marginStart="15dp"
        android:layout_x="9dp"
        android:layout_y="136dp" />

    <Button
        android:id="@+id/reconfigureBtn"
        android:layout_width="74dp"
        android:layout_height="56dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="214dp"
        android:layout_x="485dp"
        android:layout_y="289dp"
        android:background="@color/colorAccent"
        android:text="Recon"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/f1Btn"
        android:layout_width="74dp"
        android:layout_height="56dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="372dp"
        android:layout_x="485dp"
        android:layout_y="148dp"
        android:background="@color/colorAccent"
        android:contentDescription="F1 value"
        android:text="F1"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/f2Btn"
        android:layout_width="74dp"
        android:layout_height="56dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="295dp"
        android:layout_x="485dp"
        android:layout_y="218dp"
        android:background="@color/colorAccent"
        android:contentDescription="F2 value"
        android:text="F2"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/fastestToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="9dp"
        android:layout_x="475dp"
        android:layout_y="467dp"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textOff="@string/fastest_button"
        android:textOn="STOP"
        android:textSize="10sp" />

    <ToggleButton
        android:id="@+id/exploreToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_x="476dp"
        android:layout_y="390dp"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:textOff="@string/explore_button"
        android:textOn="STOP"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/fastestTimeTextView"
        android:layout_width="73dp"
        android:layout_height="56dp"
        android:layout_marginStart="59dp"
        android:layout_x="483dp"
        android:layout_y="519dp"
        android:text="@string/default_time"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/exploreTimeTextView"
        android:layout_width="77dp"
        android:layout_height="52dp"
        android:layout_marginTop="118dp"
        android:layout_x="483dp"
        android:layout_y="438dp"
        android:text="@string/default_time"
        android:textSize="10sp" />


    <TextView
        android:id="@+id/exploreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:text="@string/explore_time"
        android:textSize="20sp"
        android:visibility="gone"/>
    <!--  wrap_content  -->
    <!--  120 x 45  -->
    <!--  45 x 45  -->

    <ImageButton
        android:id="@+id/exploreResetImageBtn"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_refresh" />
    <!--  wrap_content  -->

    <Button
        android:id="@+id/calibrationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="52dp"
        android:layout_x="475dp"
        android:layout_y="630dp"
        android:text="CALIBRATE"
        android:textSize="11sp"
        android:textStyle="bold"/>
    <!--        app:srcCompat="@drawable/ic_refresh"-->

    <TextView
        android:id="@+id/fastestTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fastest_time"
        android:textSize="20sp"
        android:visibility="gone" />
    <!--  wrap_content  -->
    <!--  120 x 45  -->
    <!--  45 x 45  -->

    <ImageButton
        android:id="@+id/fastestResetImageBtn"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_refresh" />
    <!--  140 x 25  -->
    <!--  140 x 50  -->

    <!--  wrap_content  -->

    <TextView
        android:id="@+id/robotStatusTextView"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="75dp"
        android:layout_x="125dp"
        android:layout_y="82dp"
        android:background="@drawable/border"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:text="Pending status..."
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/robotStatusTitleTextView"
        android:layout_width="140dp"
        android:layout_height="17dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        android:layout_x="-4dp"
        android:layout_y="94dp"
        android:text="@string/robot_status_title"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="10dp"
        android:textStyle="bold" />

    <!--  wrap_content  -->
    <!--  210 x wrap_content  -->

    <!--  150 x wrap_content  -->

    <!--  30 x 40  -->

    <Switch
        android:id="@+id/phoneTiltSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="8dp"
        android:layout_x="203dp"
        android:layout_y="826dp"
        android:splitTrack="false"
        android:textSize="12sp"
        android:text="TILT OFF" />

    <ToggleButton
        android:id="@+id/setWaypointToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_x="203dp"
        android:layout_y="746dp"
        android:background="@color/colorAccent"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textOff="@string/set_waypoint_button"
        android:textOn="CANCEL"
        android:textSize="12sp" />

    <ToggleButton
        android:id="@+id/setStartPointToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_x="44dp"
        android:layout_y="746dp"
        android:background="@color/colorAccent"
        android:padding="10px"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textOff="@string/set_start_point_button"
        android:textOn="CANCEL"
        android:textSize="12sp" />

    <Button
        android:id="@+id/resetMapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_x="47dp"
        android:layout_y="817dp"
        android:background="@color/colorAccent"
        android:padding="10px"
        android:text="@string/reset_map_button"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/xLabelTextView"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_horizontal"
        android:text="X:"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/xAxisTextView"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/colorRed"
        android:textSize="24sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/yLabelTextView"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:gravity="center_horizontal"
        android:text="Y:"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/yAxisTextView"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/colorRed"
        android:textSize="24sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/directionLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:gravity="center_horizontal"
        android:text="Direction:"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/directionAxisTextView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:text="None"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/directionChangeImageBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:layout_x="440dp"
        android:layout_y="85dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_direction" />

    <ImageButton
        android:id="@+id/exploredImageBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="504dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="8dp"
        android:layout_x="480dp"
        android:layout_y="85dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_checked" />

    <ImageButton
        android:id="@+id/obstacleImageBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:layout_x="520dp"
        android:layout_y="85dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_obstacle" />

    <ImageButton
        android:id="@+id/clearImageBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="56dp"
        android:layout_x="560dp"
        android:layout_y="85dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_remove" />

    <TextView
        android:id="@+id/messageSentTitleTextView"
        android:layout_width="292dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_black_background"
        android:text="@string/message_sent"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/messageReceivedTitleTextView"
        android:layout_width="292dp"
        android:layout_height="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border_black_background"
        android:text="@string/message_received"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/messageSentTextView"
        android:layout_width="292dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/border_white_background"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textSize="12sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/messageReceivedTextView"
        android:layout_width="292dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border_white_background"
        android:gravity="bottom"
        android:scrollbars="vertical"
        android:textSize="12sp"
        android:visibility="gone"/>

    <!--  55 x 55  -->

    <!--  55 x 55  -->

    <!--  55 x 55  -->
    <!--  55 x 55  -->

    <ToggleButton
        android:id="@+id/manualAutoToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="1dp"
        android:layout_x="475dp"
        android:layout_y="565dp"
        android:textAlignment="center"
        android:textOff="AUTO"
        android:textOn="MANUAL"
        android:textSize="10sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/turnRightImageBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:layout_x="478dp"
        android:layout_y="778dp"
        app:srcCompat="@drawable/ic_arrow_move_right" />

    <ImageButton
        android:id="@+id/moveForwardImageBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="18dp"
        android:layout_x="427dp"
        android:layout_y="727dp"
        app:srcCompat="@drawable/ic_arrow_move_forward" />

    <Button
        android:id="@+id/left45Btn"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="0dp"
        android:layout_x="352dp"
        android:layout_y="718dp"
        android:text="L45" />

    <ImageButton
        android:id="@+id/turnLeftImageBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="10dp"
        android:layout_x="378dp"
        android:layout_y="778dp"
        app:srcCompat="@drawable/ic_arrow_move_left" />

    <ImageButton
        android:id="@+id/moveBackwardImageBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="18dp"
        android:layout_x="427dp"
        android:layout_y="827dp"
        app:srcCompat="@drawable/ic_arrow_move_backward" />

    <Button
        android:id="@+id/right45Btn"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_x="484dp"
        android:layout_y="718dp"
        android:text="R45" />

</AbsoluteLayout>
